# Alex

Coche/: Booleano.cpp  Booleano.h  Char.cpp  Coche.cpp  Coche.h  Double.cpp  Double.h  Float.cpp  Int.cpp  Int.h  Intcell.cpp  Intcell.h  main.cpp
Programacion 2/Parcial 1/Herencia/: CMakeLists.txt  int.cpp  int.h  main.cpp  ninja.cpp  ninja.h  persona.cpp  persona.h  zanin.cpp  zanin.h
Programacion2/Parcial 1/Coche/: Booleano.cpp  Booleano.h  CMakeLists.txt  Char.cpp  Char.h  Coche.cpp  Coche.h  Double.cpp  Double.h  Float.cpp  Float.h  Int.cpp  Int.h  main.cpp
Programacion2/Parcial 1/Herencia/: int.cpp  ninja.h  persona.h
herencia/: CMakeLists.txt  Zanin.cpp  Zanin.h  int.cpp  int.h  main.cpp  ninja.cpp  ninja.h  persona.cpp  persona.h
